--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.13.73",
+    "gatsby-image": "^2.2.13",
+    "gatsby-plugin-sharp": "^2.2.17",
     "gatsby-plugin-styled-components": "^3.1.3",
+    "gatsby-source-filesystem": "^2.1.16",
+    "gatsby-transformer-sharp": "^2.2.11",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-icons": "^3.7.0",
