--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.13.73",
+    "gatsby-background-image": "^0.8.5",
     "gatsby-image": "^2.2.13",
     "gatsby-plugin-sharp": "^2.2.17",
     "gatsby-plugin-styled-components": "^3.1.3",
