--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "gatsby-image": "^2.2.13",
     "gatsby-plugin-sharp": "^2.2.17",
     "gatsby-plugin-styled-components": "^3.1.3",
+    "gatsby-plugin-transition-link": "^1.12.4",
     "gatsby-source-filesystem": "^2.1.16",
     "gatsby-transformer-sharp": "^2.2.11",
+    "gsap": "^2.1.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-icons": "^3.7.0",
