--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.6",
+    "dotenv": "^8.1.0",
     "gatsby": "^2.13.73",
     "gatsby-background-image": "^0.8.5",
     "gatsby-image": "^2.2.13",
     "gatsby-plugin-sharp": "^2.2.17",
     "gatsby-plugin-styled-components": "^3.1.3",
     "gatsby-plugin-transition-link": "^1.12.4",
+    "gatsby-source-contentful": "^2.1.29",
     "gatsby-source-filesystem": "^2.1.16",
     "gatsby-transformer-sharp": "^2.2.11",
     "gsap": "^2.1.3",
